syntax = "proto3";

service ModelRunnerService {
  rpc UpdateRunninState (StateRequest) returns (StateResponse);
}

message StateRequest {
  string run_id = 1;
  string state = 2;
  string result = 3;
  string logs = 4;
}

message StateResponse {
  bool resolved = 1;
  string err = 2;
}
